--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<img src="assets/cjp-flowers.jpeg">
 			<div>
 				<h2>Äntligen är det dags, nu gifter vi oss!</h2>
-				<p>Du har redan blivit inbjuden inofficiellt men det är stor glädje vill vi bjuda in dig/er att fira vårt bröllop tillsammans med oss!</p>
+				<p>Det är med stor glädje vill vi bjuda in dig/er att fira vårt bröllop tillsammans med oss!</p>
 				<p>Vi, Cecilia & Jan Paul, gifter oss lördagen den 19 juli 2025 på Sörbyn Lodge. Det skulle betyda mycket för oss att få dela denna speciella dag med dig/er.</p>
 			</div>
 		</section>
