--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Cecilia & Jan Paul - Bröllop - 2025-07-19</title>
 		<meta name="description" content="Vi, Cecilia & Jan Paul, gifter oss lördagen den 19 juli 2025 på Sörbyn Lodge.">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 		<link rel="stylesheet" href="style.css">
 		<script>
 			let SLEEK_COLOR_SCHEME = 'dark'; // NOTE: Ignore user's initial preference and force dark
