--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="sv">
 	<head>
 		<meta charset="utf-8">
 		<title>Cecilia & Jan Paul - Bröllop - 2025-07-19</title>
