--- a/index-noiframe.html
+++ b/index-noiframe.html
@@ -481,7 +481,7 @@
 			</div>
 		</section>
 		<section id="location">
-			<iframe title="Karta över Sörbyn Lodge" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1619.3473650093952!2d21.78298792790581!3d66.05434577853774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x45d5e5676d5a216d%3A0xb3346fa7783e23d7!2sS%C3%B6rbyn%20Lodge!5e0!3m2!1ssv!2sse!4v1742244394958!5m2!1ssv!2sse" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<!-- <iframe title="Karta över Sörbyn Lodge" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1619.3473650093952!2d21.78298792790581!3d66.05434577853774!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x45d5e5676d5a216d%3A0xb3346fa7783e23d7!2sS%C3%B6rbyn%20Lodge!5e0!3m2!1ssv!2sse!4v1742244394958!5m2!1ssv!2sse" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
 			<div>
 				<h2>Sörbyn Lodge</h2>
 				<p><a href="https://www.sorbyn.se/" target="_blank" rel="noopener">Sörbyn</a> är en underbar plats och vi vill gärna hinna umgås så mycket som möjligt, så vi vill gärna tillbringa hela helgen tillsammans med dig/er.</p>
@@ -565,7 +565,7 @@
 			<div>
 				<h2>Anmälan</h2>
 				<p>För att kunna planera boende, mat med mera, önskar vi veta nedanstående. Fyll i formuläret en gång per person/par.</p>
-				<iframe title="Formulär för anmälan" data-src="https://docs.google.com/forms/d/e/1FAIpQLSex9Yz561FUS_xoOhdI5mCE6pBapwvp09ls-d5FH75tE2VQNg/viewform?embedded=true" width="640" height="934" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe>
+				<!-- <iframe title="Formulär för anmälan" data-src="https://docs.google.com/forms/d/e/1FAIpQLSex9Yz561FUS_xoOhdI5mCE6pBapwvp09ls-d5FH75tE2VQNg/viewform?embedded=true" width="640" height="934" frameborder="0" marginheight="0" marginwidth="0">Läser in …</iframe> -->
 			</div>
 		</section>
 		<footer>
