--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 		<style>
 			/* Fonts */
 			@font-face {
-				font-family: "Tangerine";
+				font-family: "normal
+			
 				font-style: normal;
 				font-weight: normal;
 				font-display: swap;
